--- a/src/app/test-calendar/test-calendar.component.css
+++ b/src/app/test-calendar/test-calendar.component.css
@@ -1,3 +1,22 @@
+.header {
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.header-logo {
+  width: 350px; /* Ajusta el tamaño del logo según sea necesario */
+  height: auto;
+  display: block;
+  margin: 0 auto 10px auto; /* Centra el logo y añade espacio debajo */
+}
+
+.header-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
 .box {
   background-color: #f0f0f0;
   border-radius: 10px;
