--- a/src/app/test-calendar/test-calendar.component.html
+++ b/src/app/test-calendar/test-calendar.component.html
@@ -1,3 +1,7 @@
+<div class="header">
+  <img src="assets/img/nutri.png" alt="" class="header-logo">
+  <h1 class="header-title">Calendario de Citas Disponibles</h1>
+</div>
 <div class="box">
   <div class="inner-box">
     <div class="left-inner-box">
