--- a/src/app/test-calendar/test-calendar.component.css
+++ b/src/app/test-calendar/test-calendar.component.css
@@ -229,3 +229,40 @@ button:hover {
   justify-content: center;
   margin-top: 20px;
 }
+/* Estilos para los select personalizados */
+.custom-select-row {
+  display: flex;
+  
+  margin-bottom: 16px;
+}
+
+.custom-select-container {
+  flex: 1;
+  margin-right: 8px; /* Espaciado entre los dos selects */
+}
+
+.custom-select-container:last-child {
+  margin-right: 0; /* Elimina el margen derecho del último contenedor */
+}
+
+.custom-select-container label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.custom-select-container select {
+  width: 50%;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 4px;
+}
+.mat-form-field {
+  width: 100%;
+}
